objects/Partner_MLB_Target_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner MLB Target Data</relationshipLabel>
        <relationshipName>Partner_MLB_Target_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BaseLine_Discount__c</fullName>
        <label>BaseLine Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSP_Baseline_Discount__c</fullName>
        <description>DL 1/11 Requested by Sean. We need a field to track Cloud Solution Provided Discounts.</description>
        <label>CSP Baseline Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Group__c</fullName>
        <label>Country Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLB_Year__c</fullName>
        <label>MLB Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLB__c</fullName>
        <label>MLB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner MLB Target Data</label>
    <nameField>
        <label>Partner MLB Target Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner MLB Target Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>